tests/parse_errors/wrong_var_name2.src
.IPPcode18
DEFVAR GF@tes(t